# ongarde

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.ongarde/: allowlist.yaml.example  config.yaml.example
app/: __init__.py  config.py  constants.py  health.py  main.py  run.py
app/allowlist/: __init__.py  loader.py  matcher.py
app/audit/: __init__.py  factory.py  models.py  protocol.py  sqlite_backend.py  supabase_backend.py
app/auth/: __init__.py  keys.py  limiter.py  middleware.py  router.py
app/dashboard/: api.py  middleware.py
app/db/: supabase_client.py
app/models/: __init__.py  block.py  scan.py
app/proxy/: __init__.py  engine.py  headers.py  middleware.py  streaming.py
app/rules/: __init__.py  definitions.py  scanner.py
app/scanner/: __init__.py  calibration.py  definitions.py  engine.py  pool.py  presidio_worker.py  regex_engine.py  safe_scan.py  streaming_scanner.py
app/utils/: __init__.py  health.py  logger.py  ulid.py
benchmarks/: bench_presidio.py  bench_presidio_2.py  bench_proxy.py  bench_regex.py  bench_streaming.py
demo/: demo_chat.py  mock_upstream.py  start_demo.sh
docs/: INSTALLATION-GUIDE.md  STREAMING_SECURITY_MODEL.md  deployment.md  install-audit.md
marketing/: MARKETING_STRATEGY.md
setup-generator/: BACKLOG.md  README.md  UX-ASSESSMENT.md  index.html
tests/: __init__.py  conftest.py  test_security.py
tests/integration/: test_audit_backends.py  test_auth_endpoints.py  test_auth_integration.py  test_failure_modes.py  test_header_handling.py  test_proxy_handler.py  test_scan_gate.py  test_size_limits.py
tests/security/: test_redos_gate.py  test_streaming_security_model.py
tests/unit/: __init__.py  test_allowlist_loader.py  test_allowlist_matcher.py  test_api_keys.py  test_audit_factory.py  test_audit_models.py  test_audit_request_event_regression.py  (+39 more)
tools/: README.md  openclaw-diagnostic.sh  publish.sh
(+1 files in other folders)
